Changes for 4.0.0alpha1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.2rc1

New features:
..F....... [ZBXNEXT-4054] implemented feature to open first available dashboard from the list (Ivo)
..F....... [ZBXNEXT-4046] implemented dashboard widget minimum height limit (gcalenko)

Bug fixes:
..F....... [DEV-647]  fixed multiple browser sensitive javascript bugs in navigation tree widget and improved coding style (miks)
..F....... [ZBX-12623] fixed label macro resolving in maps (vjaceslavs)
..F....... [ZBX-12578] implemented widget field validation before dashboard is loaded and fixed undefined index for tag field in dashboard widgets (miks)
A.F....... [ZBX-12499] fixed macro expansion in map editor (vjaceslavs)
..F....... [ZBX-12597] fixed graph not being displayed if item update interval contains macro (Ivo)
..F....... [ZBXNEXT-3807] fixed delayed first refresh in map widget; improved coding style (miks)
........S. [ZBX-12500] fixed regular expression pre-processing step to fail if the pattern does not match input data (wiper)
..F.....S. [ZBX-11042] allowed libcurl to choose SMTP authentication mechanism other than PLAIN (gleb, vjaceslavs)
..F....... [ZBX-12374] fixed frontend side DNS parser logic to be same as server side DNS parser logic (gcalenko, Sasha)
..F....... [ZBX-8997] fixed trigger expression validation test form (gcalenko, Sasha)
..F....... [ZBX-12558] fixed scroll duration in dashboard after adding a new widget (miks)
..F.I...S. [ZBX-12434] fixed housekeeping of problems and events for deleted items and triggers; added optional database patch to cleanup problems for deleted items and triggers (vso)
..F....... [ZBX-12646] fixed incorrect SQL query in availability reports (Sasha)
..F....... [ZBX-12545] fixed undefined index error on latest data page when host was deleted in another session (gcalenko)